alignment fixed

--- a/src/components/product/productDetail/limitedpd.scss
+++ b/src/components/product/productDetail/limitedpd.scss
@@ -10,7 +10,7 @@
     .p-title {
       display: block;
       width: 100%;
-      padding-left: 43%;
+      padding-left: 20%;
     }
     .card {
       width: 100%;
